--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "optimizedhtml",
 	"version": "5.0.0",
-	"description": "OptimizedHTML 5 - Start HTML Template",
+	"description": "Start HTML Template",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
