--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "optimizedhtml",
-	"version": "5.0.0",
-	"description": "Start HTML Template",
+	"name": "starter",
+	"version": "1.0.0",
+	"description": "Starter gulp 4",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "WebDesign Master",
+	"author": "Satoshi",
 	"license": "ISC",
 	"devDependencies": {
 		"bootstrap": "^4.3.1",
@@ -16,11 +16,14 @@
 		"gulp-autoprefixer": "^7.0.0",
 		"gulp-clean-css": "^4.2.0",
 		"gulp-concat": "^2.6.1",
+		"gulp-debug": "^4.0.0",
+		"gulp-imagemin": "^6.2.0",
 		"gulp-newer": "^1.4.0",
+		"gulp-notify": "^3.2.0",
 		"gulp-rename": "^1.4.0",
-		"gulp-responsive": "^2.14.0",
 		"gulp-rsync": "0.0.8",
 		"gulp-sass": "^4.0.2",
-		"gulp-uglify-es": "^1.0.4"
+		"gulp-uglify-es": "^1.0.4",
+		"imagemin-pngquant": "^8.0.0"
 	}
 }
