--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"private": true,
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"dev": "cross-env NODE_ENV=development gulp",
+		"build": "cross-env NODE_ENV=production gulp build"
 	},
 	"browserslist": "> 0.25%, not dead",
 	"author": "Satoshi",
@@ -16,6 +17,7 @@
 		"babel-loader": "^8.0.6",
 		"bootstrap": "^4.3.1",
 		"browser-sync": "^2.26.7",
+		"cross-env": "^7.0.0",
 		"del": "^5.1.0",
 		"gulp": "^4.0.2",
 		"gulp-autoprefixer": "^7.0.0",
