--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "cross-env NODE_ENV=development gulp",
-		"build": "cross-env NODE_ENV=production gulp build"
+		"build": "cross-env NODE_ENV=production gulp build",
+		"del": "gulp clean:build"
 	},
 	"browserslist": "> 0.25%, not dead",
 	"author": "Satoshi",
