--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 		"webpack-stream": "^5.2.1"
 	},
 	"dependencies": {
-		"jquery": "^3.4.1"
+		"dat.gui": "^0.7.7",
+		"jquery": "^3.4.1",
+		"three": "^0.116.1"
 	}
 }
